# riscv-sim

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmarks.fish  readme.txt  rustfmt.toml
asm/: add.asm  box_blur.asm  branch.asm  factorial.asm  fibonnaci.asm  hazard.asm  hazard_raw.asm  hazard_war.asm  hazard_waw.asm  label.asm  loop.asm  matmul.asm  memref.asm  nop.asm  prime.asm  qoi_decode.asm  qoi_decode_clang.asm  quicksort.asm  reg.asm
benches/: bench.rs
data/: riscv-300x300.qoi  test-8x8.qoi
src/: branch.rs  cpu.rs  emulated.rs  execution_unit.rs  hazard.rs  inst.rs  lib.rs  lsq.rs  main.rs  mem.rs  out_of_order.rs  pipelined.rs  program.rs  queue.rs  rat.rs  regs.rs  reservation_station.rs  rob.rs  util.rs
tests/: test_exec.rs  test_parse.rs
