[package]
name = "aca"
version = "0.1.0"
edition = "2021"

[features]

[profile.release]
debug = false
# debug = true

[dependencies]
lru-mem = "0.2.0"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
generic-tests = "0.1.2"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
